# opentelemetry-resourcedetector-aws

./: .gitignore  Cargo.toml  LICENSE
src/: imds.rs  lib.rs
src/imds/: client.rs
