[package]
name = "opentelemetry-resourcedetector-aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
incremental = false
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
opentelemetry_sdk = "0.19"
opentelemetry-semantic-conventions = "0.11"
reqwest = { version = "0.11", default-features=false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
