[package]
name = "opentelemetry-resourcedetector-aws"
version = "0.1.0"
description = "Detect OpenTelemetry Resouce attributes from AWS environments"
keywords = ["aws", "opentelemetry"]
categories = ["config", "development-tools::debugging"]
authors = ["Vlad VASILIU"]
repository = "https://github.com/vladvasiliu/opentelemetry-resourcedetector-aws"
license-file = "LICENSE"
edition = "2021"

[dependencies]
opentelemetry_sdk = "0.19"
opentelemetry-semantic-conventions = "0.11"
reqwest = { version = "0.11", default-features=false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
